--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -132,8 +132,8 @@
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or indicators to help you gather the facts based on your situation</p>
 <h3 id="h-1">Gather the facts</h3>			  
 
-<ol class="lst-stps stps-strpd">
-<li><details open="open"><summary><div class=" brdr-lft h3 mrgn-lft-md mrgn-rght-lg mrgn-tp-0 text-info">			 
+
+<details open="open"><summary><div class=" brdr-lft h3 mrgn-lft-md mrgn-rght-lg mrgn-tp-0 text-info">			 
 			<span class="fa fa-stack  pstn-lft-xs">
 			   <span class="fas fa-circle fa-stack-2x fa-inverse "></span>
 			  <span class="far fa-circle fa-stack-2x "></span>
@@ -142,9 +142,6 @@
 	  </span>	 
 		 <h2 class="h3 text-info" id="factor1">Contract arrangement</h2>	
 	  </div></summary>
-<div id="contract2">
-<div class="d-flex mrgn-tp-md">
-
 
 <div class="clearfix"></div>
 <p id="1_2" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
@@ -189,11 +186,11 @@
 
 </form></div></div>
  
-</div>  </div> </details>
-</li>
+ </details>
 
 
-<li><h3>Documents to review </h3>
+
+<h3>Documents to review </h3>
 <p id="2_2" class="brdr-bttm">When reviewing the worker’s and payer’s documents, the type of documents and the manner in which the information is documented can provide important clues into the relationship between the 2 parties. </p>
 
 <details><summary>Factor 2 - Questions and indicators</summary>
@@ -431,10 +428,10 @@
 </div>
 </form></div></div>
 
-</details></li>
+</details>
 
 
-<li><h3> Performance of work</h3>
+<h3> Performance of work</h3>
 <p id="3_2">Control over where, when and how the work is done  need to be considered when determining the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker.</p>	
 
 <p class="brdr-bttm"></p>
@@ -538,10 +535,10 @@
 </form></div></div>
 
 </details>
-</li>
 
 
-<li><h3>Remuneration</h3>
+
+<h3>Remuneration</h3>
 <p id="4_2">In both types of arrangements (employee or self-employed) remuneration must be paid or due to the worker. However, what the remuneration was based on, the frequency of payments, whether there were deductions withheld, and how the worker requests payments can be key indicators of either a work who is an employee or one who is self-employed. </p>
 
 <p class="brdr-bttm"> </p>
@@ -695,9 +692,9 @@
 </form></div></div>
 
 </details>
-</li>
 
-<li><h3>Relationship of subordination</h3>
+
+<h3>Relationship of subordination</h3>
 <p id="5_2" class="brdr-bttm">Under the civil law the relationship of subordination constitutes the main element for determining a worker’s status. From the Civil Code of Quebec it is concluded that the existence of a relationship of subordination with respect to the performance of work is the main element of a contract of employment. The subordination is a legal subordination and, however minimal, suggests the existence of a contract of employment.</p>
 
 <details><summary>Factor 5 - Questions and indicators</summary>
@@ -967,7 +964,8 @@
 </div>
 </form></div></div>
 
-</details></li></ol>
+</details>
+
 <div id="facts" >	
 <details><summary> Analyze the facts</summary> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
