--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -140,7 +140,7 @@
 			 
 		    <span class="fas fa-handshake pull-left fa-stack-1x"></span>
 	  </span>	 
-		 <h2 class="h3 text-info" id="factor1">Contract arrangement</h2>	
+		 <h2 class="h3 text-info" id="factor1">Factor 1 - Contract arrangement</h2>	
 	  </div></summary>
 
 <div class="clearfix"></div>
