--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -133,17 +133,7 @@
 <h3 id="h-1">Gather the facts</h3>			  
 
 
-<details open="open"><summary><div class=" brdr-lft h3 mrgn-lft-md mrgn-rght-lg mrgn-tp-0 text-info">			 
-			<span class="fa fa-stack  pstn-lft-xs">
-			   <span class="fas fa-circle fa-stack-2x fa-inverse "></span>
-			  <span class="far fa-circle fa-stack-2x "></span>
-			 
-		    <span class="fas fa-handshake pull-left fa-stack-1x"></span>
-	  </span>	 
-		 <h2 class="h3 text-info" id="factor1">Factor 1 - Contract arrangement</h2>	
-	  </div></summary>
-
-<div class="clearfix"></div>
+<details open="open"><summary> <h2 class="h3 text-info" id="factor1"> <span class="fas fa-handshake text-info"> </span>Factor 1 - Contract arrangement</h2></summary>
 <p id="1_2" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
 
 <div id="ajax-cont1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -157,7 +147,7 @@
 
 <div id="ajax-cont1emp_2" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 
-<h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
+<h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The two parties intend to enter into a contract <strong>of</strong> service (COS)</p>
 <p>If the contract of service is in writing, it normally contains information such as:</p>
 <ul>
