--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -133,7 +133,7 @@
 <h3 id="h-1">Gather the facts</h3>			  
 
 
-<details open="open"><summary> <h2 class="h3 text-info" id="factor1"> <span class="fas fa-handshake text-info"> </span>Factor 1 - Contract arrangement</h2></summary>
+<details open="open"><summary> <h2 class="h3 text-info" id="factor1"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 1 - Contract arrangement</h2></summary>
 <p id="1_2" class="brdr-bttm">The CRA asks the worker and the payer what their intent was when they entered into the working arrangement. Workers and payers can choose how they set up their affairs. However, the employment status they choose must reflect their working relationship.</p>
 
 <div id="ajax-cont1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -147,7 +147,7 @@
 
 <div id="ajax-cont1emp_2" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 
-<h4><span class="fas fa-people-arrows text-info fa-1x"> </span> Indicator: Worker is an employee</h4>
+<h4><span class="fas fa-people-arrows text-info fa-1x"> </span>&nbsp;&nbsp; Indicator: Worker is an employee</h4>
 <p>The two parties intend to enter into a contract <strong>of</strong> service (COS)</p>
 <p>If the contract of service is in writing, it normally contains information such as:</p>
 <ul>
@@ -164,7 +164,7 @@
 
 
 <div id="ajax-cont1self_2" class="hidden wb-frmvld gc-font-2019 alert alert-info">
-<h4><span class="fas fa-user text-info fa-1x"> </span> Indicator: Worker is self-employed</h4>
+<h4><span class="fas fa-user text-info fa-1x"> </span>&nbsp;&nbsp; Indicator: Worker is self-employed</h4>
 <p>The two parties intend to enter into a contract <strong>for</strong> services (CFS).</p>
 
 <details><summary>Example</summary>
