--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -76,8 +76,8 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a></li>
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
@@ -214,7 +214,7 @@
  <p class="mrgn-tp-md">There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
  <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>    
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>   
+<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>   
             </div>
 
 
@@ -226,7 +226,7 @@
 <p class="mrgn-tp-md">The parties involved must be legally capable of entering into the contract to be considered a valid contract. </p>
  <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>     
+<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>     
 </div>
 
 <div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -237,7 +237,7 @@
 <p class="mrgn-tp-md">The object of the contract must be legitimate to be considered a valid contract.  </p>
  <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
+<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
 </div>
 
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -248,7 +248,7 @@
 <p class="mrgn-tp-md">The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract.  </p>
  <p class="mrgn-tp-md">If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>  
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors.html">Determine if the worker is an incorporated employee</a></p>
+<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
      
 </div>
 
@@ -266,7 +266,7 @@
    <li><a href="#contract-stop" aria-controls="contract-stop" class="overlay-lnk" role="button">Examples of termination of a contract&nbsp;<span class="far fa-question-circle"></span></a></li></ul>
 
 
-<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an incorporated employee</a></p>
+<p class="mrgn-tp-lg">Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors-psb.html">Determine if the worker is an incorporated employee</a></p>
 </div>
 
 </div></div>
