--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Determine where the contract was formed - Determine the employment status - Canada.ca</title>
+         <title>Determine the worker classification - Determine the employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -79,16 +79,16 @@
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
 
- <li>	 <a href="factors.html" class="active" aria-current="page">Determine where the contract was formed</a>	
+ <li>	 <a href="factors.html" class="active" aria-current="page">Determine the worker classification</a>	
 
 <ul class="noline">
 
-   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory other than Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory other than Quebec </a></li>
+   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Determine the worker classification - Province or territory other than Quebec</a>
+      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification - Province or territory other than Quebec </a></li>
   
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in the province of Quebec</a></li>
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Determine the worker classification - Province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification - Province of Quebec</a></li>
  
                            
                             </ul>
@@ -101,7 +101,7 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Determine where the contract was formed</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine the worker classification</h1>
  
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
@@ -117,14 +117,14 @@
 <li class="cnjnctn-col">In a province other than Quebec or in a territory</li>
 <li class="cnjnctn-col">Outside Canada and the employment is performed in a province other than Quebec, in a territory, or in another country</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Contract formed in a province or territory other than Quebec</a></p>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-federal.html">Determine the worker classification - Contract formed in a province or territory other than Quebec</a></p>
 </li>
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">In the province of Quebec</li>
 <li class="cnjnctn-col">Outside Canada and the employment is performed in Quebec</li>
 </ul>
-<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Contract formed in the province of Quebec</a></p>
+<p>Continue to: <a href="/cra-arc/payroll/guidance/factors-quebec.html">Determine the worker classification - Contract formed in the province of Quebec</a></p>
 </li>
 </ul>
 
