--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Contract formed in a province or territory other than Quebec - Determine the employment status - Canada.ca</title>
+         <title>Determine the worker classification - Contract formed in a province or territory other than Quebec - Determine the employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -76,16 +76,16 @@
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
 
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a>
 
 
 <ul class="noline">
 
-  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Contract formed in a province or territory other than Quebec</a></li>
+  <li>	 <a href="factors-federal.html" class="active" aria-current="page">Determine the worker classification - Province or territory other than Quebec</a></li>
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in the province of Quebec</a></li>
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Determine the worker classification - Province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification - Province of Quebec</a></li>
   
         
      
@@ -104,7 +104,7 @@
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Contract formed in a province or territory other than Quebec</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine the worker classification - Contract formed in a province or territory other than Quebec</h1>
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
