--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -78,8 +78,8 @@
 <li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
       <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine the worker classification</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine the worker classification</a></li>
 
 
 <li><a href="after.html" class="active" aria-current="page">Understand the income tax, payroll and GST/HST tax obligations</a>	</li>
