--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -179,11 +179,9 @@
  </details>
 
 
-
-<h3>Documents to review </h3>
+<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 2 - Documents to review</h2></summary>
 <p id="2_2" class="brdr-bttm">When reviewing the worker’s and payer’s documents, the type of documents and the manner in which the information is documented can provide important clues into the relationship between the 2 parties. </p>
 
-<details><summary>Factor 2 - Questions and indicators</summary>
 <div id="ajax-2a1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
 
 
