--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -183,8 +183,6 @@
 <p id="2_2" class="brdr-bttm">When reviewing the worker’s and payer’s documents, the type of documents and the manner in which the information is documented can provide important clues into the relationship between the 2 parties. </p>
 
 <div id="ajax-2a1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
-
-
 <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>Is the worker listed on payer’s payroll?</p>
 		<ul>
@@ -419,11 +417,10 @@
 </details>
 
 
-<h3> Performance of work</h3>
+<details><summary> <h2 class="h3 text-info" id="factor3"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 3 - Performance of work</h2></summary>
+
 <p id="3_2">Control over where, when and how the work is done  need to be considered when determining the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker.</p>	
 
-<p class="brdr-bttm"></p>
-<details><summary>Factor 3 - Questions and indicators</summary>
 <div id="ajax-3_1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>Did the worker’s position have a job description in the payer’s internal policies?</p>
@@ -524,13 +521,9 @@
 
 </details>
 
-
-
-<h3>Remuneration</h3>
+<details><summary> <h2 class="h3 text-info" id="factor4"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 4 - Remuneration</h2></summary>
 <p id="4_2">In both types of arrangements (employee or self-employed) remuneration must be paid or due to the worker. However, what the remuneration was based on, the frequency of payments, whether there were deductions withheld, and how the worker requests payments can be key indicators of either a work who is an employee or one who is self-employed. </p>
 
-<p class="brdr-bttm"> </p>
-<details><summary>Factor 4 - Questions and indicators</summary>
 <div id="ajax-4_1"><div class="wb-frmvld gc-font-2019"><form method="get">
 <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
 		<p>Were there any non-monetary benefits associated with the remuneration? </p>
@@ -681,11 +674,8 @@
 
 </details>
 
-
-<h3>Relationship of subordination</h3>
+<details><summary> <h2 class="h3 text-info" id="factor5"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 5 - Relationship of subordination</h2></summary>
 <p id="5_2" class="brdr-bttm">Under the civil law the relationship of subordination constitutes the main element for determining a worker’s status. From the Civil Code of Quebec it is concluded that the existence of a relationship of subordination with respect to the performance of work is the main element of a contract of employment. The subordination is a legal subordination and, however minimal, suggests the existence of a contract of employment.</p>
-
-<details><summary>Factor 5 - Questions and indicators</summary>
 
 <div id="ajax-5a"><div class="wb-frmvld gc-font-2019"><form method="get">
 <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
