--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -945,8 +945,8 @@
 </details>
 
 <div id="ajax-facts">
-<h3>Final analysis based on the factors</h3>
-<details><summary> <strong>Analyze</strong> the facts</summary> 
+<h3>Make your final analysis based on the 5 factors</h3>
+<details><summary> <h2 class="h3 text-info" id="analyze"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Analyze the facts</h2></summary> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
 <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -955,11 +955,11 @@
 </ul>
  </details>
 
-<details><summary><strong>Weighing</strong> the facts</summary> 
+<details><summary> <h2 class="h3 text-info" id="weight"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Weighing the facts</h2></summary> 
 <p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
 <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
  </details>
-<details><summary>Review <strong>each</strong> situation on a <strong>case-by-case basis</strong></summary> 
+<details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Review each situation on a case-by-case basis</h2></summary> 
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 </details></div>
 
