Update FF question

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -802,8 +802,7 @@ html:lang(fr) .cnjnctn-or:before {
     <p>As an affected owner, you <strong>must file</strong> an annual return.</p>
     <p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
     <p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
-	   <p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
-
+    <p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#determine">Determine if you are an affected owner</a></p>
     <details>
       <summary>Exemptions from paying the tax</summary>
       <p>You may qualify for an exemption from paying the tax. To claim it, you must select the exemption on your return.</p>
@@ -811,8 +810,7 @@ html:lang(fr) .cnjnctn-or:before {
       <p>If your ownership <strong>does not qualify</strong> for an exemption, you <strong>must</strong> pay the tax.</p>
       <p><a href="#h_1_3">Exemption eligibility for affected owners</a></p>
     </details>
-
-       <h3>Excluded owner</h3>
+    <h3>Excluded owner</h3>
     <p>If you are not an affected owner, then you are an excluded owner. You <strong>do not</strong> have to:</p>
     <ul>
       <li>File a return</li>
@@ -842,13 +840,17 @@ html:lang(fr) .cnjnctn-or:before {
                 <ul>
                   <li>A citizen or permanent resident of Canada
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-             <div class="wb-fieldflow-header">
-			    <p class="wb-fieldflow-label"><span id="labelledby5a" aria-labelledby="labelledby5a labelledby5b">For Canadian income tax purposes, do you own the residential property as a trustee of any of the following:</span></p>
-                    <div class="gc-font-2019" id="labelledby5b">
-			    <ul><li>Mutual fund trust</li><li>Real estate investment trust</li><li>Specified investment flow-through (SIFT) trust</li></ul>
-		    </div>
-	     </div>
-			        <ul>
+                      <div class="wb-fieldflow-header">
+                        <p class="wb-fieldflow-label"><span id="labelledby5a" aria-labelledby="labelledby5a labelledby5b">For Canadian income tax purposes, do you own the residential property as a trustee of any of the following:</span></p>
+                        <div class="gc-font-2019" id="labelledby5b">
+                          <ul>
+                            <li>Mutual fund trust</li>
+                            <li>Real estate investment trust</li>
+                            <li>Specified investment flow-through (SIFT) trust</li>
+                          </ul>
+                        </div>
+                      </div>
+                      <ul>
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                         <li>No
                           <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
@@ -861,26 +863,30 @@ html:lang(fr) .cnjnctn-or:before {
                                   <ul>
                                     <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>Yes</li>
                                     <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>No</li>
-                                    <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                                    <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                                   </ul>
                                 </div>
                               </li>
-                              <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                              <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                             </ul>
                           </div>
                         </li>
-                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                       </ul>
                     </div>
                   </li>
                   <li>A foreign national or temporary resident of Canada
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                       <div class="wb-fieldflow-header">
-			    <p class="wb-fieldflow-label"><span id="labelledby6a" aria-labelledby="labelledby6a labelledby6b">For Canadian income tax purposes, do you own the residential property as a trustee of any of the following:</span></p>
-                    <div class="gc-font-2019" id="labelledby6b">
-			    <ul><li>Mutual fund trust</li><li>Real estate investment trust</li><li>Specified investment flow-through (SIFT) trust</li></ul>
-		    </div>
-	     </div>
+                        <p class="wb-fieldflow-label"><span id="labelledby6a" aria-labelledby="labelledby6a labelledby6b">For Canadian income tax purposes, do you own the residential property as a trustee of any of the following:</span></p>
+                        <div class="gc-font-2019" id="labelledby6b">
+                          <ul>
+                            <li>Mutual fund trust</li>
+                            <li>Real estate investment trust</li>
+                            <li>Specified investment flow-through (SIFT) trust</li>
+                          </ul>
+                        </div>
+                      </div>
                       <ul>
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                         <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>No</li>
@@ -910,7 +916,16 @@ html:lang(fr) .cnjnctn-or:before {
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                         <li>No
                           <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-                            <p>Does your corporation own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
+                            <div class="wb-fieldflow-header">
+                              <p class="wb-fieldflow-label"><span id="labelledby7a" aria-labelledby="labelledby7a labelledby7b">For Canadian income tax purposes, do you own the residential property as a trustee of any of the following:</span></p>
+                              <div class="gc-font-2019" id="labelledby7b">
+                                <ul>
+                                  <li>Mutual fund trust</li>
+                                  <li>Real estate investment trust</li>
+                                  <li>Specified investment flow-through (SIFT) trust</li>
+                                </ul>
+                              </div>
+                            </div>
                             <ul>
                               <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                               <li>No
@@ -927,25 +942,25 @@ html:lang(fr) .cnjnctn-or:before {
                                               <ul>
                                                 <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                                                 <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner-corp"}'>No</li>
-                                                <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                                                <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                                               </ul>
                                             </div>
                                           </li>
                                           <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner-corp"}'>No</li>
-                                          <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                                          <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                                         </ul>
                                       </div>
                                     </li>
                                     <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner-corp"}'>No</li>
-                                    <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                                    <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                                   </ul>
                                 </div>
                               </li>
-                              <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                              <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                             </ul>
                           </div>
                         </li>
-                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>Unsure (none of the above)</li>
+                        <li data-wb-fieldflow='{"action": "removeClass", "source": "#unsure-owner", "class": "hidden", "live": true}'>I don't know</li>
                       </ul>
                     </div>
                   </li>
@@ -984,8 +999,8 @@ html:lang(fr) .cnjnctn-or:before {
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
                   <p>You will also have to <strong>pay the tax</strong> unless you qualify for an <a href="#exempttax">exemption</a>.</p>
-                 <p>Read more: <a href="#aff2">Affected owners</a></p>
-			<br>
+                  <p>Read more: <a href="#aff2">Affected owners</a></p>
+                  <br>
                   <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
                 <br>
@@ -1051,13 +1066,13 @@ html:lang(fr) .cnjnctn-or:before {
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
-                  <p>You will also have to <strong>pay the tax</strong> unless you qualify for an <a href="#exempttax">exemption</a>.</p>
-                 <p>Read more: <a href="#aff2">Affected owners</a></p>
-			<br>
+                  <p>You will also have to <strong>pay the tax</strong> unless you qualify for an <a href="#exempttax-corp">exemption</a>.</p>
+                  <p>Read more: <a href="#aff2">Affected owners</a></p>
+                  <br>
                   <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
                 <br>
-                <h4 id="exempttax">Determine if you are exempt from paying the tax</h4>
+                <h4 id="exempttax-corp">Determine if you are exempt from paying the tax</h4>
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
               </div>
               <p class="wb-fieldflow-label"><span id="labelledby4a" aria-labelledby="labelledby4a labelledby4b">As an affected owner of the residential property, are you one of the following:</span></p>
