--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -179,7 +179,7 @@
  </details>
 
 
-<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 2 - Documents to review</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor2"> <span class="fas fa-file-contract text-info"> </span>&nbsp;&nbsp; Factor 2 - Documents to review</h2></summary>
 <p id="2_2" class="brdr-bttm">When reviewing the worker’s and payer’s documents, the type of documents and the manner in which the information is documented can provide important clues into the relationship between the 2 parties. </p>
 
 <div id="ajax-2a1_2"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -674,7 +674,7 @@
 
 </details>
 
-<details><summary> <h2 class="h3 text-info" id="factor5"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 5 - Relationship of subordination</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor5"> <span class="fas fa-user-friends text-info"> </span>&nbsp;&nbsp; Factor 5 - Relationship of subordination</h2></summary>
 <p id="5_2" class="brdr-bttm">Under the civil law the relationship of subordination constitutes the main element for determining a worker’s status. From the Civil Code of Quebec it is concluded that the existence of a relationship of subordination with respect to the performance of work is the main element of a contract of employment. The subordination is a legal subordination and, however minimal, suggests the existence of a contract of employment.</p>
 
 <div id="ajax-5a"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -955,7 +955,7 @@
 </ul>
  </details>
 
-<details><summary> <h2 class="h3 text-info" id="weight"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Weighing the facts</h2></summary> 
+<details><summary> <h2 class="h3 text-info" id="weight"> <span class="fas fa-balance-scale text-info"> </span>&nbsp;&nbsp; Weighing the facts</h2></summary> 
 <p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
 <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
  </details>
