--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -521,7 +521,7 @@
 
 </details>
 
-<details><summary> <h2 class="h3 text-info" id="factor4"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 4 - Remuneration</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor4"> <span class="fas fa-hand-holding-usd text-info"> </span>&nbsp;&nbsp; Factor 4 - Remuneration</h2></summary>
 <p id="4_2">In both types of arrangements (employee or self-employed) remuneration must be paid or due to the worker. However, what the remuneration was based on, the frequency of payments, whether there were deductions withheld, and how the worker requests payments can be key indicators of either a work who is an employee or one who is self-employed. </p>
 
 <div id="ajax-4_1"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -946,7 +946,7 @@
 
 <div id="ajax-facts">
 <h3>Make your final analysis based on the 5 factors</h3>
-<details><summary> <h2 class="h3 text-info" id="analyze"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Analyze the facts</h2></summary> 
+<details><summary> <h2 class="h3 text-info" id="analyze"> <span class="fas fa-eye text-info"> </span>&nbsp;&nbsp; Analyze the facts</h2></summary> 
 <p>You need to analyze the facts by organizing and assessing the information you gathered. This process will move the worker into one side of the continuum, and confirm if there is an employment relationship, or if the worker is in business on his own account.</p>
 <p>You must analyze the answer to each question from both the payer <strong>and </strong>the worker to help you decide if the evidence moves the worker to the employee or self-employed side of the continuum.</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -959,7 +959,7 @@
 <p>This is the most important part of analyzing the information. When reviewing the factors, there may be some facts that support an employee-employer relationship and other facts indicate self-employement.</p>
 <p>To help you resolve this issue, you must determine the true essence of the working relationship of the parties. You must review the indicators in the factors of control, ownership of tools and equipment, opportunity for profit and financial risk, and responsibility for investment and management. As you respond to each question you should be able to decide what weight to assign each category based on a thorough review of all the responses. For example, control may favour an employee relationship, but ownership of tools may be assigned <strong>more weight </strong>due to how the total relationship is structured. This may be an indicator because of the increased weight given to this factor, the worker is moved into the independent contractor side of the continuum.</p>
  </details>
-<details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Review each situation on a case-by-case basis</h2></summary> 
+<details><summary><h2 class="h3 text-info" id="case"> <span class="fas fa-search-location text-info"> </span>&nbsp;&nbsp; Review each situation on a case-by-case basis</h2></summary> 
 <p>Whether a worker is an employee or self-employed needs to be analyzed on a case-by-case basis. Each case is unique and requires a thorough review of the facts. It is also important to remember that when attempting to move a worker to one side of the continuum or the other, you must examine the <strong>total working relationship</strong>. There is no one factor that is determinative, and there is a non-exhaustive list of factors to consider.</p>
 </details></div>
 
