--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -417,7 +417,7 @@
 </details>
 
 
-<details><summary> <h2 class="h3 text-info" id="factor3"> <span class="fas fa-handshake text-info"> </span>&nbsp;&nbsp; Factor 3 - Performance of work</h2></summary>
+<details><summary> <h2 class="h3 text-info" id="factor3"> <span class="fas fa-chart-line text-info"> </span>&nbsp;&nbsp; Factor 3 - Performance of work</h2></summary>
 
 <p id="3_2">Control over where, when and how the work is done  need to be considered when determining the degree of control held by the payer or the degree of independence held by the worker. The actual degree of control will vary with the type of work and the skills of the worker.</p>	
 
