--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -160,6 +160,8 @@
 <p>Heather is starting work for Robert, who owns the corner store in her neighborhood. They both agreed on the telephone that she would work from 7:30AM to 4:30PM, Monday to Friday, earning $10 an hour.</p>
 <p>Robert and Heather have entered into a valid verbal contract of service and, as a result, they have an employer-employee relationship. </p>
 </details>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Documents to review</a></p> 
+
  </div>
 
 
@@ -172,6 +174,7 @@
 <p>IT Computers Ltd. hires Paul’s services under a written agreement for a period of 3 months. Paul’s Beautiful Gardens will maintain the lawns and shrubs for a monthly fee of $2,000.</p>
 <p>In this case, Paul has an agreement to perform specific work for IT Computers Ltd. in return for payment. Paul has entered into a valid contract for services with IT Computers Ltd. and is considered a self-employed individual.</p>
 </details>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor2"> Factor 2 - Documents to review</a></p> 
 </div>
 
 </form></div></div>
