--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -409,11 +409,14 @@
 <div id="ajax-2cyes2_2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>Workers who are employees generally have a job title or position within the payer’s organization. </p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor3"> Factor 3 - Performance of work</a></p> 
+
 </div>
 
 <div id="ajax-2cno2_2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>Workers who are self-employed would not have an official job title or position within the payer’s organization. </p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor3"> Factor 3 - Performance of work</a></p> 
 </div>
 </form></div></div>
 
@@ -509,6 +512,7 @@
 <div id="ajax-3yes4" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The payer has greater control over when certain tasks should be completed. </p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor4"> Factor 4 - Remuneration</a></p> 
 </div>
 
 
@@ -519,6 +523,7 @@
 <div id="ajax-3no4b" class="hidden wb-frmvld gc-font-2019 alert alert-info">
 <h4><span class="fas fa-user-slash text-primary fa-1x"> </span> Indicator: Facts are neutral</h4>
 <p>The client is not indicative of an employee or self-employed. </p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor4"> Factor 4 - Remuneration</a></p> 
 </div>
 </form></div></div>
 
@@ -667,11 +672,13 @@
 <div id="ajax-4yes6" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The worker will not have any financial risk as any expenses will be reimbursed.</p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor5"> Factor 5 -  Relationship of subordination</a></p> 
 </div>
 
 <div id="ajax-4no6" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The worker bears financial risk and responsibility for their own expenses.</p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#factor5"> Factor 5 -  Relationship of subordination</a></p> 
 </div>
 </form></div></div>
 
@@ -942,6 +949,7 @@
 <div id="ajax-5n2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The worker is generally an independent contractor when there is no information demonstrating that there is a relationship of employment.  </p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#ajax-facts"> Make your final analysis based on the 5 factors</a></p> 
 </div>
 </form></div></div>
 
