--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -944,12 +944,13 @@
 <div id="ajax-5n1" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Worker is an employee</h4>
 <p>The worker is an employee as the payer and the worker refer to a relationship of employment.</p>
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 5 factors</a></p> 
 </div>
 
 <div id="ajax-5n2" class="hidden wb-frmvld gc-font-2019 mrgn-tp-lg alert alert-info">
 <h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Worker is self-employed</h4>
 <p>The worker is generally an independent contractor when there is no information demonstrating that there is a relationship of employment.  </p>
-<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#ajax-facts"> Make your final analysis based on the 5 factors</a></p> 
+<p class="mrgn-tp-md"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#analyze"> Make your final analysis based on the 5 factors</a></p> 
 </div>
 </form></div></div>
 
